# api-assignment/routes/api.php
@@ -17,3 +17,9 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
+/*
+Route::get('/api/unique-recipe-count', [RecipeController::class, 'uniqueRecipeCount']);
+Route::get('/api/count-per-recipe', [RecipeController::class, 'countPerRecipe']);
+Route::get('/api/busiest-postcode', [RecipeController::class, 'busiestPostcode']);
+Route::get('/api/match-by-name', [RecipeController::class, 'matchByName']);
+*/
