# api-assignment/routes/web.php
@@ -1,6 +1,7 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\RecipeController;
 
 /*
 |--------------------------------------------------------------------------
@@ -16,3 +17,8 @@ use Illuminate\Support\Facades\Route;
 Route::get('/', function () {
     return view('welcome');
 });
+
+Route::get('/api/unique-recipe-count', [RecipeController::class, 'uniqueRecipeCount']);
+Route::get('/api/count-per-recipe', [RecipeController::class, 'countPerRecipe']);
+Route::get('/api/busiest-postcode', [RecipeController::class, 'busiestPostcode']);
+Route::get('/api/match-by-name', [RecipeController::class, 'matchByName']);
